# PogLib

./: '  .env  Cargo.toml  Makefile  README.md  build.rs
migrations/2022-12-07-143615_create_books/: up.sql
migrations/2022-12-07-235911_create_books/: down.sql  up.sql
proto/: poglib.proto  poglib.rs
src/: client.rs  schema.rs  server.rs
src/database/: database.rs
src/models/: models.rs
