[package]
name = "grpc_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "poglib-server"
path = "src/server.rs"

[[bin]]
name = "poglib-client"
path = "src/client.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
diesel = { version = "2.0.0", features = ["mysql"] }
dotenvy = "0.15"

[build-dependencies]
tonic-build = "0.7"
